Added a hyper link to the recipe html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <H1>Odin Recipes</H1>
+    <a href="recipe/jalapeno_popper_cups.html">Jalapeno Popper Cups</a>
 </body>
 </html>
