Added 2 more hyperlinks to the other recipes and made it in a unordered list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <H1>Odin Recipes</H1>
-    <a href="recipe/jalapeno_popper_cups.html">Jalapeno Popper Cups</a>
+    <ul>
+    <li><a href="recipe/jalapeno_popper_cups.html">Jalapeno Popper Cups</a></li>
+    <li><a href="recipe/grinch_kebabs.html">Grinch Kebabs</a></li>
+    <li><a href="recipe/spicy_sausage_balls.html"></a></li>
+    </ul>
 </body>
 </html>
