--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
     <li><a href="recipe/jalapeno_popper_cups.html">Jalapeno Popper Cups</a></li>
     <li><a href="recipe/grinch_kebabs.html">Grinch Kebabs</a></li>
-    <li><a href="recipe/spicy_sausage_balls.html"></a></li>
+    <li><a href="recipe/spicy_sausage_balls.html">Spicy Sausage Balls</a></li>
     </ul>
 </body>
 </html>
