Linked a styles sheet, where I addedd a bg-colo, changed heading font elements and made the hyperlinks colorful

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin's Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <H1>Odin Recipes</H1>
+    <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="recipe/jalapeno_popper_cups.html">Jalapeno Popper Cups</a></li>
-    <li><a href="recipe/grinch_kebabs.html">Grinch Kebabs</a></li>
-    <li><a href="recipe/spicy_sausage_balls.html">Spicy Sausage Balls</a></li>
+    <li><a href="recipe/jalapeno_popper_cups.html" id="first">Jalapeno Popper Cups</a></li>
+    <li><a href="recipe/grinch_kebabs.html" id="second">Grinch Kebabs</a></li>
+    <li><a href="recipe/spicy_sausage_balls.html" id="third">Spicy Sausage Balls</a></li>
     </ul>
 </body>
 </html>
