--- a/recipe/grinch_kebabs.html
+++ b/recipe/grinch_kebabs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kebabs</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <H1>Grinch Kebabs</H1>
