Made every page look a bit better by added colors

--- a/recipe/grinch_kebabs.html
+++ b/recipe/grinch_kebabs.html
@@ -9,11 +9,11 @@
 <body>
     <H1>Grinch Kebabs</H1>
     <img src="downloads/grinch.webp">
-    <H2>Description</H2>
-    <p>These little fruit skewers are simple to make and a great addition to your appetizers at any Christmas party.</p>
+    <H2 id="description">Description</H2>
+    <p class="described">These little fruit skewers are simple to make and a great addition to your appetizers at any Christmas party.</p>
     <br>
     <H2>Ingerdients</H2>
-    <ul>
+    <ul class="bullets">
         <li>24 Green Grapes</li>
         <li>1 Large Banana, Chopped into 24 Slices</li>
         <li>24 Hulled Strawberries</li>
@@ -21,7 +21,7 @@
         <li>24 Toothpicks</li>
     </ul>
     <br>
-    <H2>Steps</H2>
+    <H2 class="steps">Steps</H2>
     <ol>
         <li>Thread 1 grape, 1 banana slice, 1 strawberry (narrow end facing up), and 1 marshmallow onto 1 toothpick to resemble the Grinch's head in his red hat.</li>
         <li>Repeat 24 times</li>
