--- a/recipe/jalapeno_popper_cups.html
+++ b/recipe/jalapeno_popper_cups.html
@@ -9,12 +9,12 @@
 <body>
     <H1>Jalapeno Popper Cups</H1>
     <img src="downloads/cups.webp">
-    <H2>Description</H2>
-    <p>Didn't have enough Jalapenos to make full out poppers, but improvised for a creamy and spicy appetizer.</p>
-    <p>You'll want to eat them right away, but they will be molten hot so be careful!</p>
+    <H2 id="description">Description</H2>
+    <p class="described">Didn't have enough Jalapenos to make full out poppers, but improvised for a creamy and spicy appetizer.</p>
+    <p class="described">You'll want to eat them right away, but they will be molten hot so be careful!</p>
     <br>
     <H2>Ingerdients</H2>
-    <ul>
+    <ul class="bullets">
         <li>12 Mini Phyllo Tart Sheets</li>
         <li>4 Ounces Cream Cheese</li>
         <li>1/2 Cup Shredded Cheese</li>
@@ -23,7 +23,7 @@
         <li>Bacon Bits</li>
     </ul>
     <br>
-    <H2>Steps</H2>
+    <H2 id="steps">Steps</H2>
     <ol>
         <li>Preheat an oven to 350 degrees F (175 degrees C). Place phyllo cups onto a baking sheet.</li>
         <li>Stir together cream cheese, Cheddar cheese, jalapenos, and hot sauce in a bowl. Spoon mixture into phyllo cups. Sprinkle bacon bits on top. Bake in preheated oven until golden brown, about 15 to 20 minutes. Serve warm.</li>
