--- a/recipe/spicy_sausage_balls.html
+++ b/recipe/spicy_sausage_balls.html
@@ -9,12 +9,12 @@
 <body>
     <H1>Spicy Sausage Balls</H1>
     <img src="downloads/spicy.webp">
-    <H2>Description</H2>
-    <p>These sausage balls are as good as Bisquick® sausage balls, but without the carbs and gluten.</p>
-    <p>They are also keto friendly! Eat them fresh out of the oven or refrigerate or freeze for later use.</p>
+    <H2 id="description">Description</H2>
+    <p class="described">These sausage balls are as good as Bisquick® sausage balls, but without the carbs and gluten.</p>
+    <p class="described">They are also keto friendly! Eat them fresh out of the oven or refrigerate or freeze for later use.</p>
     <br>
     <H2>Ingerdients</H2>
-    <ul>
+    <ul class="bullets">
         <li>1 Pound Bulk Spicy Sausage</li>
         <li>1 Pound Shredded Cheddar Cheese</li>
         <li>1 Cup Almond Flour</li>
@@ -24,7 +24,7 @@
         <li>1/2 Tsp Baking Powder</li>
     </ul>
     <br>
-    <H2>Steps</H2>
+    <H2 id="steps">Steps</H2>
     <ol>
         <li>Preheat the oven to 325 degrees F (165 degrees C). Line a jelly roll pan with parchment paper.</li>
         <li>Combine sausage, Cheddar cheese, almond flour, coconut flour, gelatin, egg, and baking powder in a large bowl. Mix to combine using your hands, a stand mixer, or a food processor. Form mixture into uniformly-sized balls (about 1 1/2-inch diameter) and place on the prepared pan.</li>
