Corrected class selector to ID selector

--- a/recipe/grinch_kebabs.html
+++ b/recipe/grinch_kebabs.html
@@ -21,7 +21,7 @@
         <li>24 Toothpicks</li>
     </ul>
     <br>
-    <H2 class="steps">Steps</H2>
+    <H2 id="steps">Steps</H2>
     <ol>
         <li>Thread 1 grape, 1 banana slice, 1 strawberry (narrow end facing up), and 1 marshmallow onto 1 toothpick to resemble the Grinch's head in his red hat.</li>
         <li>Repeat 24 times</li>
